--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -18,6 +18,9 @@
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
+// custom printing styles.
+@import "print/print";
+
 ol, ul {
   padding-left: 1.5em;
   .popover &:last-child {
@@ -67,15 +70,3 @@ p:last-child,
     margin-top: 0;
   }
 }
-
-// Don't print any extraneous stuff
-@media print {
-  header, footer, nav {
-    display: none;
-  }
-
-  a[href]:after {
-    content: "";
-  }
-}
-
